<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_yellow_button" />

    <EditText
        android:id="@+id/edt_nama_acara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/nama"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <EditText
        android:id="@+id/edt_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/desk"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="@dimen/appbar_padding_top"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_pembicara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/pembicara"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <EditText
        android:id="@+id/edt_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/alamat"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <EditText
        android:id="@+id/edt_duror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/duror"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <TextView
        android:id="@+id/tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/tanggal"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <TextView
        android:id="@+id/jam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/waktu"
        android:inputType="textCapWords"
        android:padding="@dimen/appbar_padding_top" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />

    <Button
        android:id="@+id/simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/bg_button"
        android:text="@string/simpan"
        android:textColor="@android:color/white" />

</LinearLayout>
