<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/appbar_padding_top" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@drawable/border_yellow_button"
        android:hint="@string/hint_repassword"
        android:inputType="textPassword"
        android:padding="@dimen/appbar_padding_top" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/simpan"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/keluar"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>